# captures-to-md

./: .gitignore  README.md  pyproject.toml
.claude/commands/: ingest-wiki.md  parse-folder.md
scripts/: validate_sdk.py
src/captures_to_md/: __init__.py  __main__.py  cli.py  config.py  extend_client.py  history.py  logging.py  markdown_assets.py  processor.py  retry.py  scan.py  stability.py  watcher.py
tests/: conftest.py  test_dispatcher_dedup.py  test_history.py  test_markdown_assets.py  test_processor_integration.py  test_retry.py  test_scan.py  test_stability.py  test_watcher_filters.py
